--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -78,8 +78,8 @@ x-airflow-common:
     - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
     - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
     - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
-    - /home/thyall/processos/:/opt/airflow/scripts/
-  user: "${AIRFLOW_UID:-50000}:0"
+    - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/scripts
+  user: "root"
   depends_on:
     &airflow-common-depends-on
     redis:
