dag de crawler blogs criada, volume dev criado e dag tutorial de bash atualizada

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -78,7 +78,8 @@ x-airflow-common:
     - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
     - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
     - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
-    - /home/thyall/processos:/opt/airflow/scripts
+    - /home/thyall/processos/mining-api/campanha/mineracao:/opt/airflow/scripts
+    - /home/thyall/processos:/opt/airflow/scripts_dev
   user: "root"
   depends_on:
     &airflow-common-depends-on
